--- a/src/main/resources/static/templates/home.html
+++ b/src/main/resources/static/templates/home.html
@@ -1,12 +1,14 @@
-<h1>
-    Вітаємо!
-</h1>
-<div class="row">
-    <div class="col-lg-4">
-        <div class="list-group">
-            <a class="list-group-item" ui-sref="home">Головна</a>
-            <a class="list-group-item" ui-sref="indexing">Індексація</a>
-            <a class="list-group-item" ui-sref="result">Результати</a>
+<div>
+    <h1>
+        Вітаємо!
+    </h1>
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="list-group">
+                <a class="list-group-item" ui-sref="home">Головна</a>
+                <a class="list-group-item" ui-sref="indexing">Індексація</a>
+                <a class="list-group-item" ui-sref="result">Результати</a>
+            </div>
         </div>
     </div>
 </div>
